--- a/src/scss/sprint/style.scss
+++ b/src/scss/sprint/style.scss
@@ -174,7 +174,9 @@
             font-size: 20px;
             box-shadow: inset 0 0 10px #5B2C6F,
                         inset 0 0 25px #5B2C6F,
-                        inset 0 0 40px #5B2C6F;
+                        inset 0 0 40px #5B2C6F,
+                        0 3px 6px rgba(0,0,0,0.16),
+                        0 3px 6px rgba(0,0,0,0.23);
             min-width: 300px;
             transition: border 0.2s ease-out,
                         box-shadow 0.3s ease-out;
@@ -263,6 +265,7 @@
             margin: 10px 0;
             border: 3px solid #5B2C6F;
             min-width: 300px;
+            box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 
             * {
                 width: 0%;
@@ -342,6 +345,7 @@
         background-color: #ffffff;
         overflow-y: auto;
         box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+        font-size: 1.75rem;
 
         &-container {
             display: flex;
