--- a/src/scss/statistics/statistics.scss
+++ b/src/scss/statistics/statistics.scss
@@ -15,7 +15,58 @@
         font-size: 2.75rem;
     }
 
+    h3 {
+        font-size: 2.25rem;
+    }
+
     p, ul {
         font-size: 1.85rem;
+    }
+
+    &__graph { 
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+
+        &-range {
+            margin-top: 15px;
+            margin-bottom: 10px;
+            appearance: none;
+            width: 200px;
+            height: 7px;
+            outline: none;
+            border-radius: 5px;
+            background-color: rgba(77, 77, 105, 0.88);
+        
+            &::-webkit-slider-thumb {
+              appearance: none;
+              width: 25px;
+              height: 25px;
+              background-color: rgba(77, 77, 105, 0.88);
+              border: 4px solid $button-bg-normal;
+              border-radius: 50%;
+              cursor: pointer;
+            }
+        }
+
+        &-output {
+            position: absolute;
+            left: 46%;
+            top: 46%;
+            font-size: 1.5rem;
+        }
+
+        &-label {
+            font-size: 1.5rem;
+        }
+    }
+
+    canvas {
+        width: 400px;
+        height: 200px;
+        border: 3px solid rgba(77, 77, 105, 0.88);
+        background-image: url(../../assets/images/setka.png);
     }
 }
