feat: finish graph & change default statistics & add favicon

--- a/src/scss/statistics/statistics.scss
+++ b/src/scss/statistics/statistics.scss
@@ -67,6 +67,6 @@
         width: 400px;
         height: 200px;
         border: 3px solid rgba(77, 77, 105, 0.88);
-        background-image: url(../../assets/images/setka.png);
+        background-image: url(../../assets/images/grid.png);
     }
 }
