feat: change styles implementation for mobile nav-menu

--- a/src/scss/intro_page/base/_media-queries.scss
+++ b/src/scss/intro_page/base/_media-queries.scss
@@ -67,6 +67,12 @@
         &_open {
             left: 0;
         }
+        &-active {
+            left          : 0;
+            display       : flex;
+            flex-direction: column;
+            justify-content: flex-start;
+        }
     }
 
     .nav-toggle {
