--- a/src/scss/intro_page/components/_navigation-menu.scss
+++ b/src/scss/intro_page/components/_navigation-menu.scss
@@ -10,6 +10,12 @@
 
         }
     }
+    &__active {
+        left          : 0;
+        display       : flex;
+        flex-direction: column;
+        justify-content: flex-start;
+    }
 }
 
 .nav-toggle {
@@ -23,10 +29,12 @@
 
     &:checked {
         &+.nav-bar {
+            /*
             left          : 0;
             display       : flex;
             flex-direction: column;
             justify-content: flex-start;
+            */
         }
     }
 }
