--- a/src/scss/authorization_page/base/_base.scss
+++ b/src/scss/authorization_page/base/_base.scss
@@ -1,7 +1,7 @@
 main {
-  background: url(../../assets/images/nature.jpg) center center no-repeat;
+  background: url(../../assets/images/nature.jpg) 50% no-repeat;
   background-size: cover;
-  height: 100vh;
+  min-height: calc(100vh - 40px);
 }
 
 
