--- a/src/scss/intro_page/base/_base.scss
+++ b/src/scss/intro_page/base/_base.scss
@@ -1,62 +1,64 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
-    scroll-behavior: smooth;
-    font-size  : $reference-font-size;
-    font-family: $page-font-family;
-    color      : rgba(77, 77, 105, 0.877);
+  scroll-behavior: smooth;
+  font-size: $reference-font-size;
+  font-family: $page-font-family;
+  color: rgba(77, 77, 105, 0.877);
 }
 
-
 .wrapper {
-    position         : relative;
-    display: flex;
-	flex-direction: column;
-	min-height: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
 }
 
 .container {
-    padding  : 0 20px;
-    max-width: 1020px;
-    margin   : 0 auto;
+  padding: 0 20px;
+  max-width: 1020px;
+  margin: 0 auto;
 }
 
 .flex {
-    @include flex();
+  @include flex();
 }
 
 a {
-    cursor         : pointer;
-    text-decoration: none;
-    color          : #000;
+  cursor: pointer;
+  text-decoration: none;
+  color: #000;
 }
 
 .nav-bar {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 .column-layout {
-    margin: 0 -15px;
-    align-items: stretch;
+  margin: 0 -15px;
+  align-items: stretch;
 }
 
 .column-layout__item {
-    margin  : 15px;
-    overflow: hidden;
-    text-align: center;
-    &>img {
-        width: 100%;
-    }
+  margin: 15px;
+  overflow: hidden;
+  text-align: center;
+  & > img {
+    width: 100%;
+    border-radius: 50%;
+    margin-bottom: 10px;
+  }
+  &:last-child {
+      margin-bottom: 100px;
+  }
 }
 
-
-
 .column-layout-6 {
-    width: calc(50% - 30px);
+  width: calc(50% - 30px);
 }
 
 .column-layout-4 {
-    width: calc(33.333333% - 30px);
+  width: calc(33.333333% - 30px);
 }
