--- a/src/scss/intro_page/components/_presentation.scss
+++ b/src/scss/intro_page/components/_presentation.scss
@@ -1,30 +1,31 @@
 .presentation {
-    &-section {
-        padding: 30px 0;
-    }
+  &-section {
+    padding: 30px 0;
+    background-color: #fff5ee;
+  }
 
-    &__title {
-        background             : -webkit-linear-gradient(45deg, #0b2349 33%, #0d61bc 66%, #8aa9d6);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        font-size              : 3rem;
-    }
+  &__title {
+    background: #103481;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 3rem;
+    margin-bottom: 40px;
+  }
 }
 
-
 .relation {
-    position  : relative;
+  position: relative;
 
-    &__ratio {
-        padding-top: 56.25%;
-        height     : 0;
-    }
+  &__ratio {
+    padding-top: 56.25%;
+    height: 0;
+  }
 
-    &__content {
-        position: absolute;
-        width   : 100%;
-        height  : 100%;
-        top     : 0;
-        left    : 0;
-    }
+  &__content {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+  }
 }
