--- a/src/scss/intro_page/layout/_about-us-section.scss
+++ b/src/scss/intro_page/layout/_about-us-section.scss
@@ -1,31 +1,39 @@
 .about-team {
-    font-size       : 2rem;
-    background-color: #f2f2f2;
-    box-shadow      : 0px 6px 0px 0px #ffffff;
-    text-align      : justify;
-    padding         : 30px 0;
-    margin-bottom   : 5px;
+  font-size: 2rem;
+  background-color: #f2f2f2;
+  box-shadow: 0px 6px 0px 0px #ffffff;
+  text-align: justify;
 
-    &__title {
-        font-size              : 3rem;
-        padding-top            : 20px;
-        background             : -webkit-linear-gradient(45deg, #0b2349 33%, #0d61bc 66%, #8aa9d6);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-    }
+  &__title {
+    font-size: 3rem;
+    padding-top: 20px;
+    background: #103481;;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-bottom: 30px;
+  }
+}
+
+.team-common-introducing {
+  margin-bottom: 20px;
 }
 
 .person-name {
-    font-size              : 2.5rem;
-    background             : -webkit-linear-gradient(45deg, #0b2349 33%, #0d61bc 66%, #8aa9d6);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+  font-size: 2.5rem;
+  background: #ecd08e;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin-bottom: 10px;
+}
+.item__person-links {
+  margin-top: 15px;
 }
 
 .gh-account-name {
-    justify-content: flex-start;
-    span {
-        padding-left: 10px;
-        color: rgba(77,77,105,.877);
-    }
+  justify-content: flex-start;
+  span {
+    padding-left: 10px;
+    color: rgba(77, 77, 105, 0.877);
+    font-weight: bold;
+  }
 }
