--- a/src/scss/intro_page/layout/_app-intro-section.scss
+++ b/src/scss/intro_page/layout/_app-intro-section.scss
@@ -1,26 +1,29 @@
 .app-intro-title {
+    margin-top: 30px;
     font-size              : 3rem;
-    text-align             : justify;
+    text-align             : center;
     padding-bottom         : 50px;
-    background             : -webkit-linear-gradient(45deg, #0B2349 33%, #0D61BC 66%, #8AA9D6);
+    background             : #103481;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
-.app-intro-options {
-   // margin: 0 -25px;
-}
 
+.option-title-icon {
+    height: 64px;
+    width:64px;
+    margin-bottom: 10px;
+}
 
 .option {
     &-header {
         display           : flex;
-        /* justify-content: center; */
         flex-direction    : column;
         align-items       : center;
     }
     &-title {
         font-size: 2rem;
+        margin-bottom: 8px;
     }
 }
 
