--- a/src/scss/main-page/main-page.scss
+++ b/src/scss/main-page/main-page.scss
@@ -6,7 +6,7 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-
+        padding: 10px 20px;
         @media screen and (max-width: 730px){
             justify-content: center;
         }
@@ -27,14 +27,20 @@
             font-size: 2rem;
         }
 
-        
-        @media screen and (max-width: 680px){
-            font-size: 3rem;
+        @media screen and (max-width: 435px){
+            font-size: 1.7rem;
         }
+        @media screen and (max-width: 330px){
+        min-width: 280px;
+        }
+
+
 
         .alternative-content{
             visibility: hidden;
             opacity: 0;
+            position: absolute;
+            top:0;
             transition: display 0.2s ease-out;
             transition: visibility 0s, opacity 0.5s linear;
         }
@@ -52,7 +58,7 @@
         }
 
         width: 20%;
-        height: 200px;
+        height: 180px;
         cursor: pointer;
         text-align: center;
         box-sizing: border-box;
@@ -85,6 +91,9 @@
             
             @media screen and (max-width: 680px){
                 font-size: 3rem;
+            }
+            @media screen and (max-width: 500px){
+                font-size: 2rem;
             }
         }
 
@@ -139,17 +148,19 @@
             opacity: 1;
             height: 100%;
             color: $text-white;
-            position: absolute;
+
             left: 0; 
             right: 0; 
             margin-left: auto; 
             margin-right: auto; 
-            top: 40px;
+   
 
             p { 
+                
                 width: 60%;
                 text-align: center;
                 margin: 0 auto;
+                margin: 40px auto 0 auto;
             }
         }
     }
