fix: main height

--- a/src/scss/audio-call/style.scss
+++ b/src/scss/audio-call/style.scss
@@ -1,7 +1,7 @@
 
 
 .main-audio-call{
-	min-height: 100vh;
+	min-height: calc(100vh - 80px);
 	display: flex;
 	justify-content: center;
 	align-items: center;
