--- a/src/scss/speakIt/style.scss
+++ b/src/scss/speakIt/style.scss
@@ -17,6 +17,7 @@
 }
 .speakit {
   background: url(/../img/speakit1.jpg) 50% no-repeat;
+  background-size: cover;
   &__main {
     padding-bottom: 20px;
   }
@@ -131,6 +132,10 @@
     height: 240px;
     margin: 20px auto;
     box-shadow: 0px 0px 22px 0px rgba(72, 76, 122, 1);
+    @media screen and (max-width: 470px) {
+      width: 290px;
+      height: 220px;
+    }
     img {
       width: 100%;
       height: 100%;
@@ -140,7 +145,7 @@
   .speakit__translation {
     padding: 10px;
     border-bottom: 1px solid gray;
-    width: 320px;
+    width: 300px;
     margin: 20px auto;
     font-size: 2rem;
     text-align: center;
@@ -213,6 +218,11 @@
     @media screen and (max-width: 650px) {
       justify-content: center;
     }
+    @media screen and (max-width: 350px) {
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
     button {
       height: 50px;
       font-size: 2rem;
@@ -221,6 +231,11 @@
         width: 120px;
         font-size: 1.5rem;
         margin-right: 10px;
+      }
+      @media screen and (max-width: 350px) {
+        width: 100px;
+        font-size: 1.2rem;
+        margin-bottom: 10px;
       }
     }
     &__restart-btn,
