--- a/src/scss/intro_page/base/_base.scss
+++ b/src/scss/intro_page/base/_base.scss
@@ -46,13 +46,20 @@ a {
   overflow: hidden;
   text-align: center;
   & > img {
+    padding: 10px;
     width: 100%;
+    max-width: 300px;
     border-radius: 50%;
     margin-bottom: 10px;
+    object-fit: cover;
+    height: 100%;
+    min-height:300px;
   }
+  /*
   &:last-child {
       margin-bottom: 100px;
   }
+  */
 }
 
 .column-layout-6 {
