--- a/src/scss/speakIt/style.scss
+++ b/src/scss/speakIt/style.scss
@@ -1,7 +1,7 @@
 .speakit__loader {
   position: absolute;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   top: 0;
   left: 0;
   display: flex;
@@ -321,6 +321,14 @@
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0px 0px 22px 0px rgba(72, 76, 122, 1);
+    @media screen and (max-width: 650px) {
+      padding: 40px 50px;
+      max-width: 500px;
+    }
+    @media screen and (max-width: 550px) {
+      padding: 30px 30px;
+      max-width: 400px;
+    }
   }
   .errors__description,
   .correct__description {
@@ -354,6 +362,9 @@
     padding: 10px 10px 10px 25px;
     margin-bottom: 10px;
     position: relative;
+    @media screen and (max-width: 550px) {
+      font-size: 1.4rem;
+    }
     &__icon {
       left: 0;
       top: 0;
@@ -364,6 +375,9 @@
       background-repeat: no-repeat;
       background-position: 50%;
       background-size: 25px;
+    }
+    &__name {
+      font-weight: bold;
     }
     &:hover {
       cursor: pointer;
@@ -387,6 +401,9 @@
     position: relative;
     overflow: hidden;
     transition: 0.2s ease-in-out;
+    @media screen and (max-width: 350px) {
+      margin-top: 20px;
+    }
     &:hover {
       cursor: pointer;
     }
