--- a/src/scss/puzzle/base/_base.scss
+++ b/src/scss/puzzle/base/_base.scss
@@ -1,9 +1,22 @@
 #puzzle {
   background: url(../../assets/images/puzzle/start-bg.jpeg) center center no-repeat;
   background-size: cover;
-  height: calc(100vh - 80px);
+  min-height: calc(100vh - 80px);
   font-size: 10px;  
   font-family: 'Cormorant Upright', serif;
+
+  &.puzzle_full-screen {
+    min-height: 100vh;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    &::before {
+      top: 0;
+    }  
+
+  }
   
   &::before {
     position: absolute;
@@ -17,6 +30,7 @@
 
   .puzzle-wrapper {
     padding: 0 50px;
+    min-height: calc(100vh - 80px);
   }
   
   .hide {
