fix: add property to fix card image visibility

--- a/src/scss/intro_page/base/_media-queries.scss
+++ b/src/scss/intro_page/base/_media-queries.scss
@@ -29,6 +29,7 @@
         .profile__photo {
             width: 200px;
             height: 200px;
+            min-height: 200px;
         }
         .column-layout-12 {
             width: 100%;
