--- a/src/scss/audio-call/style.scss
+++ b/src/scss/audio-call/style.scss
@@ -9,6 +9,14 @@
 	background-size: cover;
 	color: white;
 
+	&.main-audio-call_full-screen {
+		height: 100vh;
+		width: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
+	}
+
 .start-screen {
 	width: 80%;
 	min-height: 50vh;
