--- a/src/scss/audio-call/style.scss
+++ b/src/scss/audio-call/style.scss
@@ -5,10 +5,19 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background: url(../../assets/images/background2.jpg);
+	background: url(../../assets/images/audio-call-4.png);
 	background-size: cover;
 	color: white;
-
+	&--game {
+		display: block;
+		.start-screen {
+			padding-top: 50px;
+			margin: 0 auto;
+		} 
+	}
+	.indicator {
+		transition: 1s ease-in;
+	}
 	&.main-audio-call_full-screen {
 		height: 100vh;
 		width: 100%;
@@ -17,45 +26,62 @@
 		left: 0;
 	}
 
+
 .start-screen {
 	width: 80%;
 	min-height: 50vh;
 	text-align: center;
 }
 h1 {
-	font-size: 50px;
+	font-size: 60px;
+	font-weight: 300;
 }
 h2 {
 	font-size: 24px;
 	padding: 5px 0px;
+	margin-bottom: 30px;
 }
 h3 {
 	padding-bottom: 20px;
 	font-size: 18px;
+	
 }
+.main-page__description {
+    font-size: 25px;
+    line-height: 1.4;
+    font-weight: 300;
+    text-align: center;
+	margin: 80px 0;
+  }
+
 .level-block {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
 	padding-bottom: 15px;
-	width: 180px;
-	margin: 0px auto;
+	width: 280px;
+	margin: 15px auto;
 	div {
 		font-size: 22px;
-		padding: 0px 5px;
-		opacity: 0.5;
-		border-radius: 5px;
-		margin: 2px;
+		// padding: 10px;
+		width: 35px;
+		height: 35px;
+		// opacity: 0.5;
+		border-radius: 50%;
+		margin-right: 10px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+
 		border: 1px solid white;
 		&:hover {
 			cursor: pointer;
-			opacity: 1;
-			border: 1px solid white;
-			transition: 0.5s linear;
+			transition: 0.5s ease-in-out;
 		}
 	}
 	.active {
-		border: 1px solid white;
+		background-color: #5556aa;
+		border: none;
 		opacity: 1;
 	}
 }
@@ -71,9 +97,10 @@ h3 {
 	font-size: 30px;
 	padding-top: 8px;
 	&:hover {
-		background-color: rgb(163, 224, 199);
+		background-color: #46489a;
+		color: #fff;
 		cursor: pointer;
-		transition: 0.5s linear;
+		transition: 0.3s ease-in;
 	}
 }
 .indicator {
@@ -83,6 +110,7 @@ h3 {
 	top: 0%;
 	left: 0%;
 	border-radius: 5px;
+	transition: 0.5s;
 }
 .indicatorBlock {
 	width: 100%;
@@ -99,14 +127,16 @@ h3 {
 	justify-content: center;
 	padding-top: 40px;
 	padding-bottom: 20px;
-	font-size: 20px;
+	font-size: 24px;
+	font-weight: 600;
+	color: #db7235;
 	div {
 		padding-left: 20px;
 		padding-bottom: 20px;
 		text-transform: lowercase;
 		&:hover {
 			cursor: pointer;
-			opacity: 0.5;
+			opacity: 1;
 			transition: 0.5s linear;
 		}
 	}
@@ -114,20 +144,25 @@ h3 {
 .result {
 	font-size: 24px;
 	padding-bottom: 50px;
+	color: #db7235;
+	font-weight: 600;
 }
 .dont-known-btn {
-	border: 1px solid white;
+	// border: 1px solid white;
+	background-color: #46489a;
+	border-radius: 5px;
 	width: 200px;
 	font-size: 20px;
 	text-transform: uppercase;
 	padding: 10px 20px;
 	margin: 0px auto;
-	opacity: 0.5;
 	height: 45px;
-	margin-bottom: 40px;
+	// margin-botmargin-bottom: 40px;
+	
 	&:hover {
 		cursor: pointer;
-		opacity: 1;
+		border: none;
+		background-color: #46489a;
 		transition: 0.5s linear;
 	}
 }
@@ -149,21 +184,26 @@ h3 {
 	font-size: 50px;
 	margin: 40px 0px 10px 0px;
 }
-.eng-img {
+.image-container {
 	margin-top: 40px;
-	width: 120px;
-	height: auto;
-	border-radius: 20%;
+	margin-left: auto;
+	margin-right: auto;
+	height: 180px;
+	width: 200px;
+}
+.eng-img {
+	width: 100%;
+	height: 100%;
+	border-radius: 8px;
 }
 .statistics {
 	font-size: 26px;
 	padding-top: 30px;
-	opacity: 0.7;
 	margin: 0px auto;
 	&:hover {
 		cursor: pointer;
-		opacity: 1;
-		transition: 0.5s linear;
+
+		transition: 0.8s linear;
 	}
 }
 td {
