feat: preview screen styles

--- a/src/scss/audio-call/style.scss
+++ b/src/scss/audio-call/style.scss
@@ -1,5 +1,3 @@
-
-
 .main-audio-call{
 	min-height: calc(100vh - 80px);
 	display: flex;
@@ -64,20 +62,21 @@ h3 {
 	margin: 15px auto;
 	div {
 		font-size: 22px;
-		// padding: 10px;
 		width: 35px;
 		height: 35px;
-		// opacity: 0.5;
 		border-radius: 50%;
 		margin-right: 10px;
 		display: flex;
 		justify-content: center;
 		align-items: center;
-
 		border: 1px solid white;
+
 		&:hover {
 			cursor: pointer;
-			transition: 0.5s ease-in-out;
+			border-color: #5556aa;
+			color: #5556aa;
+			transition: border-color 0.3s ease-out,
+						color 0.3s ease-out;
 		}
 	}
 	.active {
@@ -97,11 +96,12 @@ h3 {
 	text-transform: uppercase;
 	font-size: 30px;
 	padding-top: 8px;
+
 	&:hover {
 		background-color: #46489a;
 		color: #fff;
 		cursor: pointer;
-		transition: 0.3s ease-in;
+		transition: 0.3s ease-out;
 	}
 }
 .indicator {
@@ -149,7 +149,6 @@ h3 {
 	font-weight: 600;
 }
 .dont-known-btn {
-	// border: 1px solid white;
 	background-color: #46489a;
 	border-radius: 5px;
 	width: 200px;
@@ -158,7 +157,6 @@ h3 {
 	padding: 10px 20px;
 	margin: 0px auto;
 	height: 45px;
-	// margin-botmargin-bottom: 40px;
 	
 	&:hover {
 		cursor: pointer;
@@ -201,11 +199,28 @@ h3 {
 	font-size: 26px;
 	padding-top: 30px;
 	margin: 0px auto;
-	&:hover {
-		cursor: pointer;
+	position: relative;
+	width: 15%;
+	cursor: pointer;
 
-		transition: 0.8s linear;
+	&::after {
+		background: none repeat scroll 0 0 transparent;
+		bottom: 0;
+		content: "";
+		display: block;
+		height: 2px;
+		left: 50%;
+		position: absolute;
+		background: #fff;
+		transition: width 0.3s ease 0s, left 0.3s ease 0s;
+		width: 0;
 	}
+
+	&:hover::after { 
+		bottom: -5px;
+		width: 100%; 
+		left: 0; 
+	  }
 }
 td {
 	padding: 5px;
