--- a/src/scss/settings/settings.scss
+++ b/src/scss/settings/settings.scss
@@ -262,7 +262,7 @@
 
   &__get-indicator {
     z-index: 100;
-    position: absolute;
+    position: fixed;
     top: 0px;
     left: 0px;
     width: 100%;
