--- a/src/scss/spacedRepetition/style.scss
+++ b/src/scss/spacedRepetition/style.scss
@@ -24,6 +24,9 @@ body {
     $fourth_color: rgba(1, 75, 104, 0.8);
     $button_background: rgba(202, 235, 216, 0.4);
     $wrong_answer: rgb(218, 112, 112);
+
+    padding-bottom: 20px;
+
     .main__wrapper {
       margin: 0 auto;
       max-width: 1200px;
