--- a/src/scss/authorization_page/components/_loader.scss
+++ b/src/scss/authorization_page/components/_loader.scss
@@ -1,5 +1,5 @@
 .authorization__loader-container {
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100vh;
     top: 0;
