--- a/src/scss/sprint/sprint.scss
+++ b/src/scss/sprint/sprint.scss
@@ -289,7 +289,7 @@
             width: 100%;
             height: 100%;
             background-color: rgba(255, 255, 255, 0.6);
-            position: absolute;
+            position: fixed;
             top: 0;
             left: 0;
             display: flex;
